--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,10 @@
 @import "semantic-ui";
+.my-custom {
+    background-color: #415364;
+    border: 4px solid #d3d3d3 !important;
+    color: white;
+}
+
+.chatbox {
+    height: 450px;
+}
